NTI-1555 - fix spacing around grade box column

--- a/src/main/resources/scss/debris/course/components/_assignments-gradebook.scss
+++ b/src/main/resources/scss/debris/course/components/_assignments-gradebook.scss
@@ -328,13 +328,6 @@
 		}
 		.col-score {
 			width: 4em;
-			.grade-box {
-				display: inline;
-				width: 3em;
-				height: 2em;
-				margin: 0;
-				padding: 0 0.25rem;
-			}
 		}
 	}
 }
